--- a/lang/en.yml
+++ b/lang/en.yml
@@ -1,5 +1,5 @@
 en:
-  ShareCare:
+  JonoM\ShareCare\ShareCare:
     SharePreview: "Share Preview"
     SharePreviews: "Share Previews"
     Share: "Share"
@@ -9,7 +9,7 @@ en:
     TabName: "Share"
     EmailSubject: "Thought you might like this"
     EmailBody: "Thought of you when I found this: {URL}"
-  ShareCareFields:
+  JonoM\ShareCare\ShareCareFields:
     CMSMessage: "The preview is automatically generated from your content. You can override the default values using these fields:"
     ShareTitle: "Share title"
     ShareDescription: "Share description"
@@ -17,7 +17,7 @@ en:
     ShareImageRatio: "{Link}Optimum image ratio</a> is 1.91:1. (1200px wide by 630px tall or better)"
     PinterestImage: "Pinterest image"
     PinterestImageDescription: "Square/portrait or taller images look best on Pinterest. This image should be at least 750px wide."
-  ShareCareSummary:
+  JonoM\ShareCare\ShareCareSummary:
     SummaryTitle: "Content summary"
     SummaryDescription: "Summarise the content of this page. This will be used for search engine results and social media so make it enticing."
     ImageTitle: "Summary image"
