--- a/lang/it.yml
+++ b/lang/it.yml
@@ -1,5 +1,5 @@
 it:
-  ShareCare:
+  JonoM\ShareCare\ShareCare:
     SharePreview: "Anteprima condivisione"
     SharePreviews: "Anteprime condivisioni"
     Share: "Condividi"
@@ -9,7 +9,7 @@ it:
     TabName: "Condivisione"
     EmailSubject: "Ho pensato che ti potesse interessare"
     EmailBody: "Ho pensato a te quando ho trovato questo: {URL}"
-  ShareCareFields:
+  JonoM\ShareCare\ShareCareFields:
     CMSMessage: "Questa anteprima è automaticamente generata dal tuo contenuto. Puoi sovrascrivere i valori di default utilizzando questi campi:"
     ShareTitle: "Titolo della condivisione"
     ShareDescription: "Descrizione della condivisione"
@@ -17,7 +17,7 @@ it:
     ShareImageRatio: "Il {Link}rapporto ottimale dell'immagine</a> è 1.91:1. (almeno 1200px di larghezza per 630px di altezza)"
     PinterestImage: "Immagine Pinterest"
     PinterestImageDescription: "I rapporti di forma quadrata e ritratto funzionano meglio su Pinterest. L'immagine dovrebbe essere almeno larga 750px."
-  ShareCareSummary:
+  JonoM\ShareCare\ShareCareSummary:
     SummaryTitle: "Sommario dei contenuti"
     SummaryDescription: "Riassumi i contenuti di questa pagina. Questo testo verrà usato nei risultati dei motori di ricerca e nei social network, quindi deve essere interessante."
     ImageTitle: "Immagine di sommario"
